[RZA-250099]: Refactor styles with the use of global.css and fix card alignment

--- a/src/assets/styles/about.css
+++ b/src/assets/styles/about.css
@@ -2,12 +2,15 @@
   --bg-dark: #0f172a;
   --bg-light: #ffffff;
   --bg-secondary: #1e293b;
-  --primary: #3b82f6;
+  --primary-dark: #3b82f6;
   --primary-light: #60a5fa;
   --text-main: #f8fafc;
   --text-primary: #cbd5e1;
   --text-secondary: #212223;
-  --accent: #f59e0b;
+}
+
+.title {
+color:light-dark(var(--primary),var(--primary-dark));
 }
 
 .about-container {
@@ -21,7 +24,7 @@
 }
 
 .text-highlight {
-  color: var(--primary);
+  color: light-dark(var(--primary),var(--primary-dark));
   font-weight: 700;
 }
 
